       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.

In 0.11:
--------
patchlevel 2:
	- fixed a bunch of bugs with smart placement, cascade placement,
	  unclutter, snap to border and snap to window (bugs given mostly
	  by the wrong assumption that te client's geometry is defined
	  relative to free desk space). Thanks Stephan (CT)
        - fixed a nasty pointer-grab bug for window movement

patchlevel 1:
	- fixed the avoidance of shaded windows bug in smart placement.
	  Ugly fix. Ugh! (CT)
	- snap to border and snap to window functions (CT). Maximum limit
	  arbitrarily fixed at 50 pixels. Complain if you're unhappy with :-)

patchlevel 0: (Matthias? Bernd?)

In 0.10:
--------
patchlevel 33:
        - new property "EdgeResistance=<value>". Default value is 50
        - bugfix for electric borders
        - bugfix for winMove and winResize (internal pointer grabbing)
        - bugfix for interactive (manual) placement: now the whole
          window is painted :)
        - bugfix for electric borders (Diego Zamboni) 

patchlevel 32:
	- fixed bugs:   interactive placement persistence
			transient windows placed interactively (NOT!) (CT)
	- deskUnclutter and deskCascade commands (to issue through kwmcom
	   in minicli for the moment; krootwm menu entries soon) (CT)

patchlevel 31: 
	-- Bernd: minor fixes (typos in the sound events)
       - small fix for alt-tab
       - changed "ElectricBorderMovePointer" values to on/off to be 
         consitent with the rest of kwm.

patchlevel 30:
	-- Bernd: 
	
	Further improved Electric Borders. They can now be graphically
        configured using a kcontrol module and also completely turned off.
	