@@ -65,7 +65,6 @@ struct kwmOptions {
   int AutoRaise;
   int ElectricBorder;
   bool ElectricBorderMovePointer;
-  int EdgeResistance;
   bool ControlTab;
   bool Button3Grab;
   //CT 18jan98, 07mar98, 17mar98
